@@ -46,7 +46,7 @@ namespace FbTk {
 
 FbWindow::FbWindow():FbDrawable(), m_parent(0), m_screen_num(0), m_window(0), m_x(0), m_y(0),
                      m_width(0), m_height(0), m_border_width(0), m_depth(0), m_destroy(true),
-                     m_lastbg_color_set(false), m_lastbg_color(0), m_lastbg_pm(0), m_renderer(0), m_is_carrier(false) {
+                     m_lastbg_color_set(false), m_lastbg_color(0), m_lastbg_pm(0), m_renderer(0) {
 
 }
 
@@ -58,8 +58,7 @@ FbWindow::FbWindow(const FbWindow& the_copy):FbDrawable(),
                                              m_border_width(the_copy.borderWidth()),
                                              m_depth(the_copy.depth()), m_destroy(true),
                                              m_lastbg_color_set(false), m_lastbg_color(0), 
-                                             m_lastbg_pm(0), m_renderer(the_copy.m_renderer),
-                                             m_is_carrier(false) {
+                                             m_lastbg_pm(0), m_renderer(the_copy.m_renderer) {
     the_copy.m_window = 0;
 }
 
@@ -77,7 +76,7 @@ FbWindow::FbWindow(int screen_num,
     m_destroy(true),
     m_lastbg_color_set(false),
     m_lastbg_color(0),
-    m_lastbg_pm(0), m_renderer(0), m_is_carrier(false) {
+    m_lastbg_pm(0), m_renderer(0) {
 
     create(RootWindow(display(), screen_num),
            x, y, width, height, eventmask,
@@ -94,7 +93,7 @@ FbWindow::FbWindow(const FbWindow &parent,
     m_screen_num(parent.screenNumber()),
     m_destroy(true),
     m_lastbg_color_set(false), m_lastbg_color(0),
-    m_lastbg_pm(0), m_renderer(0), m_is_carrier(false) {
+    m_lastbg_pm(0), m_renderer(0) {
 
     create(parent.window(), x, y, width, height, eventmask,
            override_redirect, save_unders, depth, class_type);
@@ -111,7 +110,7 @@ FbWindow::FbWindow(Window client):FbDrawable(), m_parent(0),
                                   m_depth(0),
                                   m_destroy(false),  // don't destroy this window
                                   m_lastbg_color_set(false), m_lastbg_color(0),
-                                  m_lastbg_pm(0), m_renderer(0), m_is_carrier(false) {
+                                  m_lastbg_pm(0), m_renderer(0) {
 
     setNew(client);
 }
@@ -151,14 +150,10 @@ void FbWindow::setBackgroundPixmap(Pixmap bg_pixmap) {
 }
 
 void FbWindow::updateBackground(bool only_if_alpha) {
-    
-    if (isCarrier())
-        return;
-    
     Pixmap newbg = m_lastbg_pm;
     unsigned char alpha = 255;
     bool free_newbg = false;
-    
+
     if (m_lastbg_pm == None && !m_lastbg_color_set)
         return;
 
@@ -168,9 +163,9 @@ void FbWindow::updateBackground(bool only_if_alpha) {
     if (only_if_alpha && alpha == 255) 
         return;
 
-    // still use bg buffer pixmap if transparent
-    // cause it does nice caching things
-    if (m_lastbg_pm != ParentRelative) {
+     // still use bg buffer pixmap if not transparent
+     // cause it does nice caching things, assuming we have a renderer
+     if (m_lastbg_pm != ParentRelative && (m_renderer || alpha != 255)) {
         // update source and destination if needed
         Pixmap root = FbPixmap::getRootPixmap(screenNumber());
         if (alpha != 255 && m_transparent->source() != root)
